changed a linked in href

--- a/Front End/index.html
+++ b/Front End/index.html
@@ -267,7 +267,7 @@
 				</div>
 				<div class="member-social">
 					<a href="https://www.instagram.com/aliinayatullah/" target="_blank"><i class="fa fa-instagram"></i></a>
-					<a href="https://linkedin.com/in/ali-inayatullah" target="_blank"><i class="fa fa-linkedin"></i></a>
+					<a href="linkedin.com/in/ali-inayatullah-0b0855242" target="_blank"><i class="fa fa-linkedin"></i></a>
 					<a href="https://github.com/AliInayatullah" target="_blank"><i class="fa fa-github"></i></a>
 				</div>
 				<div class="member-info">
